--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Alumno.cs" />
     <Compile Include="Asignatura.cs" />
     <Compile Include="Docente.cs" />
+    <Compile Include="jefePractica.cs" />
     <Compile Include="Laboratorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
